# llm-judge-research-tracker

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
reports/: README.md  daily_papers.csv  llm-as-a-judge.md  llm-as-a-judge_subclasses.md  llm-as-a-judge_tags.csv  llm-as-a-judge_tags.json
reports/daily/: 2025-11-23.md  2025-11-24.md  2025-11-25.md  2025-11-26.md  2025-11-27.md  2025-11-28.md  2025-11-29.md  2025-11-30.md  2025-12-01.md  2025-12-02.md  2025-12-03.md  2025-12-04.md  2025-12-05.md  2025-12-06.md  2025-12-07.md  2025-12-08.md  2025-12-09.md  2025-12-10.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-14.md  2025-12-15.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-21.md  2025-12-22.md  2025-12-23.md  2025-12-24.md  2025-12-25.md  2025-12-26.md  2025-12-27.md  2025-12-28.md  2025-12-29.md  2025-12-30.md  2025-12-31.md  2026-01-01.md  (+53 more)
scripts/: collect_llm_judge_arxiv.py  com.local.llm_judge_arxiv.plist  export_daily_papers_csv.py  run_llm_judge_daily.py
