[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pytorch-lightning>=2.2.0",
    "tqdm>=4.66.0",
    "pillow>=10.2.0",
    "scipy>=1.12.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "jupyterlab-code-formatter>=2.2.1"
]
